# sample-python-django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  scalingo.json
mydjango/: settings.py
mydjangoapp/: views.py
mydjangoapp/templates/mydjangoapp/: index.html
